Fix padding on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -457,6 +457,9 @@ footer {
 .intro-text {
     margin: auto;
     padding-left: 4rem;
+    @media screen and (max-width: 740px)  {
+        padding-left: 0;
+    }
 }
 
 /* Tools */
